2015-10-26  Doug Evans  <dje@google.com>

	* common/gdb_wait.h (W_STOPCODE): Define, moved here from
	gdbserver/linux-low.c.
	(WSETSTOP): Simplify.

2015-10-26  Doug Evans  <dje@google.com>

	* linux-thread-db.c (find_new_threads_callback): Ditto.
	(thread_db_pid_to_str): Ditto.

2015-10-26  Simon Marchi  <simon.marchi@polymtl.ca>

	* guile/scm-ports.c (ioscm_make_gdb_stdio_port): Do not pass a
	local char array to scm_mode_bits, use a cast instead.

2015-10-26  Simon Marchi  <simon.marchi@ericsson.com>

	* tui/tui-data.c (tui_alloc_content): Don't check xmalloc
	result.  Change type of element_block_ptr.  Change allocation to
	use XNEWVEC.

2015-10-26  Luis Machado  <lgustavo@codesourcery.com>

	* record-full.c (record_full_message_wrapper_safe): Pass empty string to
	catch_errors call instead of NULL.

2015-10-26  Simon Marchi  <simon.marchi@polymtl.ca>

	* guile/scm-ports.c (ioscm_make_gdb_stdio_port): Pass non-const
	char pointer to scm_mode_bits.

2015-10-26  Simon Marchi  <simon.marchi@polymtl.ca>

	* symtab.c (default_make_symbol_completion_list_break_on_1): Add
	cast.

2015-10-26  Simon Marchi  <simon.marchi@polymtl.ca>

	* guile/scm-ports.c (gdbscm_memory_port_write): Declare new
	"data" local variable and use it.

2015-10-26  Simon Marchi  <simon.marchi@polymtl.ca>

	* guile/scm-symbol.c (gdbscm_lookup_global_symbol): Add
	domain_enum cast.
	(gdbscm_lookup_symbol): Likewise.

2015-10-25  Iain Buclaw  <ibuclaw@gdcproject.org>

	* d-exp.y: Remove an obsolete comment and propagate the block
	information to the produced expression.

2015-10-24  Simon Marchi  <simon.marchi@polymtl.ca>

	* tui/tui-data.c (tui_add_to_source_windows): Remove void *
	cast.
	(tui_add_content_elements): Likewise.

2015-10-24  Simon Marchi  <simon.marchi@polymtl.ca>

	* cli/cli-setshow.c (do_set_command): Constify p.

2015-10-24  Simon Marchi  <simon.marchi@polymtl.ca>

	* nat/linux-ptrace.c (linux_ptrace_test_ret_to_nx): Replace
	(void *) cast with (gdb_byte *).
